[package]
name = "TASK"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.2"
reqwest = { version = "0.11", features = ["blocking", "json"] } 
scraper = "0.24.0"
select = "0.6.1"
tokio = { version = "1.47", features = ["full"] }
headless_chrome = "0.9"
url = "2.5.7"
sha2 = "0.10.9"
futures = "0.3.31"
anyhow = "1.0.99"
once_cell = "1.21.3"
serde = "1.0.219"
toml = "0.9.5"
serde_json = "1.0.145"
